syntax = "proto3";

package user;
option go_package = "/pb";

service UserService {
    rpc RegisterUser (RegisterRequest) returns (RegisterResponse);
    rpc LoginUser (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    string id = 1;
    string username = 2;
    bool success = 3;
    string error_message = 4;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    bool success = 2;
    string error_message = 3;
}